compiler/src/test/resources/amyc/nameAnalyzer/failing/DuplicateParams.amy
object Params
  fn foo(i: Int(32), i: Boolean): Int(32) = { i }
end Params
